feat:implement discover events section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,7 @@
   --color-purple-brown: #2b1f26;
   --color-gray-background-9: #1e293b;
   --color-gray-background-7: #475569;
+  --color-gray-background-6: ##64748b;
   --breakpoint-xs: 400px;
 }
 
