--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,6 +63,19 @@ body {
   font-family: "Lexend", sans-serif;
 }
 
+.card-shadow {
+  box-shadow:
+    0px 4px 6px -2px rgba(114, 114, 114, 0.03),
+    0px 12px 16px -4px rgba(58, 58, 58, 0.08);
+}
+
+.clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 /* overflow tests */
 /* * {
   outline: 1px solid red !important;
