--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,6 +76,14 @@ body {
   overflow: hidden;
 }
 
+.btn{
+  @apply  cursor-pointer
+}
+
+.btn:disabled{
+  @apply opacity-20
+}
+
 /* Hide number input arrows in Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
@@ -92,7 +100,7 @@ input[type="number"] {
   background-size: 200%;
   animation: skeleton 2.5s ease-in-out infinite;
   -webkit-animation: skeleton 2.5s ease-in-out infinite;
-  @apply dark:bg-gray-700
+  /* @apply dark:bg-gray-700 */
 }
 
 .skeleton.card {
