--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,11 @@ input[type="number"] {
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 /* overflow tests */
 /* * {
   outline: 1px solid red !important;
